hphp/test/quick/trailing_comma_bad6.php.expectf

Fatal error: A right parenthesis (')') is expected here. in %s/trailing_comma_bad6.php on line 2
